[project]
name = "nrcli"
version = "0.1.0"
description = "CLI for NetRise Turbine SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "netrise-turbine-sdk>=0.1.13,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[project.scripts]
nrcli = "nrcli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nrcli*"]
